@@ -1,4 +1,7 @@
-10/07/2012 support vector<string>.
+11/07/2012 Add multi-os support in Makefile and remove unused objv in 
+           callbacks_cd.h. 
+           [Thanks to the suggestions from Stephan Effelsberg]
+11/07/2012 support vector<string>.
 10/07/2012 add support to handl Tcl variables.
 10/07/2012 correct an early return  bug in interpreter::clear_definitions().
 
